--- a/css/main.css
+++ b/css/main.css
@@ -117,7 +117,7 @@
   color: rgba(112, 112, 112, 0.03);
   font-weight: 700;
   animation-name: animate;
-  animation-duration: 30s;
+  animation-duration: 40s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
@@ -441,9 +441,10 @@
 .footer {
   width: 100%;
   min-height: 200px;
-  background-color: #fff;
+  background-color: #F8F8F8;
 }
 .footer .f_inner {
+  display: block;
   padding-top: 120px;
   width: 100%;
   text-align: center;
