--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -106,7 +106,8 @@ $font2 : 800;
     
 }
 .visual {
-    min-height: 950px;
+    min-height: 850px;
+    height: 100vh;
     position: relative;
     .inner {
         width: 100%;
