--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,7 @@
 }
 
 .visual {
+  max-height: 950px;
   min-height: 850px;
   height: 100vh;
   position: relative;
@@ -126,13 +127,26 @@
   width: 100%;
   margin-top: 250px;
 }
+.visual .tit .txth1 {
+  overflow: hidden;
+  height: 60px;
+}
+.visual .tit .txth2 {
+  overflow: hidden;
+  height: 96px;
+}
 .visual .tit p {
+  opacity: 0;
+  animation: fadeInUp forwards 0.8s;
+  overflow: hidden;
   display: block;
   font-size: 50px;
 }
 .visual .tit h2 {
+  animation: fadeInUp forwards 0.8s 0.1s;
+  opacity: 0;
   font-size: 80px;
-  font-weight: 800;
+  font-weight: 700;
 }
 .visual .tit h2 span {
   font-weight: 400;
@@ -144,8 +158,14 @@
   margin-bottom: 150px;
   width: 100%;
 }
+.visual .subtit .txtbox {
+  height: 36px;
+  overflow: hidden;
+}
 .visual .subtit p {
+  opacity: 0;
   font-size: 30px;
+  animation: fadeInUp forwards 0.8s 0.2s;
 }
 .visual .sub {
   width: 100%;
@@ -162,13 +182,13 @@
 .visual .sub ul .sub_cnt span {
   display: block;
   font-size: 25px;
-  font-weight: 800;
+  font-weight: 700;
   margin-bottom: 10px;
 }
 .visual .sub ul .sub_cnt em {
   display: block;
   font-size: 20px;
-  font-weight: 800;
+  font-weight: 700;
   margin-top: 10px;
 }
 .visual .sub ul .sub_cnt p {
@@ -184,6 +204,12 @@
   min-height: 820px;
   width: 100%;
 }
+.about.on .txt {
+  animation: fromside forwards 0.5s 0.5s;
+}
+.about.on::after {
+  animation: fromside2 forwards 0.5s 0.1s;
+}
 .about::before {
   position: absolute;
   content: "";
@@ -195,15 +221,26 @@
   height: 100%;
   background-color: #F8F8F8;
 }
+.about::after {
+  position: absolute;
+  content: "";
+  display: block;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #F8F8F8;
+}
 .about .inner {
   position: relative;
   padding: 200px 0 0 0;
   transform: translate(18%);
 }
 .about .inner h2 {
+  opacity: 0;
   display: block;
   font-size: 20px;
-  font-weight: 800;
+  font-weight: 700;
   margin-bottom: 20px;
 }
 .about .inner .top {
@@ -215,6 +252,7 @@
 }
 .about .inner .top ul li {
   min-width: 300px;
+  opacity: 0;
 }
 .about .inner .top ul li p {
   display: block;
@@ -239,13 +277,13 @@
   opacity: 1;
 }
 .about .inner .top ul .skill .progress.on .bar1 {
-  animation: barscale 1.6s forwards;
+  animation: barscale 1.6s forwards 0.5s;
 }
 .about .inner .top ul .skill .progress.on .bar2 {
-  animation: barscale 1.5s forwards;
+  animation: barscale 1.5s forwards 0.5s;
 }
 .about .inner .top ul .skill .progress.on .bar3 {
-  animation: barscale 1.8s forwards;
+  animation: barscale 1.8s forwards 0.5s;
 }
 .about .inner .top ul .skill .progress div {
   background-color: #B7B7B7;
@@ -280,6 +318,7 @@
   justify-content: space-between;
 }
 .about .inner .bot ul li {
+  opacity: 0;
   min-width: 300px;
 }
 .about .inner .bot ul li p {
@@ -292,7 +331,19 @@
 .about .inner .bot ul li span strong {
   display: block;
   min-width: 50px;
-  font-weight: 800;
+  font-weight: 700;
+}
+.about .inner .info.animation {
+  animation: fromside forwards 0.5s 0.6s;
+}
+.about .inner .skill.animation {
+  animation: fromside forwards 0.5s 0.7s;
+}
+.about .inner .edu.animation {
+  animation: fromside forwards 0.5s 0.8s;
+}
+.about .inner .exp.animation {
+  animation: fromside forwards 0.5s 0.9s;
 }
 
 .page {
@@ -321,18 +372,16 @@
 .page .inner p strong {
   font-weight: 600;
 }
-.page .inner .content {
+.page .inner .content1, .page .inner .content2, .page .inner .content3 {
   display: block;
   width: 100%;
   height: auto;
+  opacity: 0;
 }
-.page .inner .content:hover {
+.page .inner .content1:hover, .page .inner .content2:hover, .page .inner .content3:hover {
   background-color: #F8F8F8;
 }
-.page .inner .content.last .depth1 {
-  border-bottom: 1px solid #9d9d9d;
-}
-.page .inner .content .depth1 {
+.page .inner .content1 .depth1, .page .inner .content2 .depth1, .page .inner .content3 .depth1 {
   display: flex;
   justify-content: space-between;
   position: relative;
@@ -340,13 +389,13 @@
   border-top: 1px solid #9d9d9d;
   margin: 0 60px;
 }
-.page .inner .content .depth1 li {
+.page .inner .content1 .depth1 li, .page .inner .content2 .depth1 li, .page .inner .content3 .depth1 li {
   width: 50%;
 }
-.page .inner .content .depth1:hover {
+.page .inner .content1 .depth1:hover, .page .inner .content2 .depth1:hover, .page .inner .content3 .depth1:hover {
   background-color: #F8F8F8;
 }
-.page .inner .content .depth1 .img1, .page .inner .content .depth1 .img2, .page .inner .content .depth1 .img3 {
+.page .inner .content1 .depth1 .img1, .page .inner .content1 .depth1 .img2, .page .inner .content1 .depth1 .img3, .page .inner .content2 .depth1 .img1, .page .inner .content2 .depth1 .img2, .page .inner .content2 .depth1 .img3, .page .inner .content3 .depth1 .img1, .page .inner .content3 .depth1 .img2, .page .inner .content3 .depth1 .img3 {
   margin-top: 20px;
   margin-bottom: 20px;
   width: 100%;
@@ -359,11 +408,11 @@
   border: 1px solid #9d9d9d;
   max-width: 760px;
 }
-.page .inner .content .depth1 .img1 p, .page .inner .content .depth1 .img2 p, .page .inner .content .depth1 .img3 p {
+.page .inner .content1 .depth1 .img1 p, .page .inner .content1 .depth1 .img2 p, .page .inner .content1 .depth1 .img3 p, .page .inner .content2 .depth1 .img1 p, .page .inner .content2 .depth1 .img2 p, .page .inner .content2 .depth1 .img3 p, .page .inner .content3 .depth1 .img1 p, .page .inner .content3 .depth1 .img2 p, .page .inner .content3 .depth1 .img3 p {
   font-size: 0;
   line-height: 0;
 }
-.page .inner .content .depth1 .img1 strong, .page .inner .content .depth1 .img2 strong, .page .inner .content .depth1 .img3 strong {
+.page .inner .content1 .depth1 .img1 strong, .page .inner .content1 .depth1 .img2 strong, .page .inner .content1 .depth1 .img3 strong, .page .inner .content2 .depth1 .img1 strong, .page .inner .content2 .depth1 .img2 strong, .page .inner .content2 .depth1 .img3 strong, .page .inner .content3 .depth1 .img1 strong, .page .inner .content3 .depth1 .img2 strong, .page .inner .content3 .depth1 .img3 strong {
   position: absolute;
   content: "";
   bottom: -20px;
@@ -376,25 +425,25 @@
   font-size: 0;
   line-height: 0;
 }
-.page .inner .content .depth1 .img1 {
+.page .inner .content1 .depth1 .img1, .page .inner .content2 .depth1 .img1, .page .inner .content3 .depth1 .img1 {
   background-image: url(../images/visual1.png);
   margin-right: 60px;
 }
-.page .inner .content .depth1 .img1 strong {
+.page .inner .content1 .depth1 .img1 strong, .page .inner .content2 .depth1 .img1 strong, .page .inner .content3 .depth1 .img1 strong {
   background-image: url(../images/visual1_mobile.png);
 }
-.page .inner .content .depth1 .img2 {
+.page .inner .content1 .depth1 .img2, .page .inner .content2 .depth1 .img2, .page .inner .content3 .depth1 .img2 {
   background-image: url(../images/visual2.png);
   margin-left: 60px;
 }
-.page .inner .content .depth1 .img2 strong {
+.page .inner .content1 .depth1 .img2 strong, .page .inner .content2 .depth1 .img2 strong, .page .inner .content3 .depth1 .img2 strong {
   background-image: url(../images/visual2_mobile.png);
 }
-.page .inner .content .depth1 .img3 {
+.page .inner .content1 .depth1 .img3, .page .inner .content2 .depth1 .img3, .page .inner .content3 .depth1 .img3 {
   margin-right: 60px;
   background-image: url(../images/visual3.png);
 }
-.page .inner .content .depth2 {
+.page .inner .content1 .depth2, .page .inner .content2 .depth2, .page .inner .content3 .depth2 {
   padding: 20px 60px;
   display: flex;
   flex-wrap: wrap;
@@ -402,41 +451,50 @@
   width: 100%;
   height: 450px;
 }
-.page .inner .content .depth2 li {
+.page .inner .content1 .depth2 li, .page .inner .content2 .depth2 li, .page .inner .content3 .depth2 li {
   width: 100%;
   height: 50%;
 }
-.page .inner .content .depth2 .top {
+.page .inner .content1 .depth2 .top, .page .inner .content2 .depth2 .top, .page .inner .content3 .depth2 .top {
   display: flex;
   justify-content: space-between;
-  font-weight: 800;
+  font-weight: 700;
 }
-.page .inner .content .depth2 .top strong {
+.page .inner .content1 .depth2 .top strong, .page .inner .content2 .depth2 .top strong, .page .inner .content3 .depth2 .top strong {
   position: relative;
   font-size: 20px;
 }
-.page .inner .content .depth2 .top strong em {
+.page .inner .content1 .depth2 .top strong em, .page .inner .content2 .depth2 .top strong em, .page .inner .content3 .depth2 .top strong em {
   position: absolute;
   content: "";
   font-size: 30px;
   top: -6px;
   right: 0;
 }
-.page .inner .content .depth2 .top span {
+.page .inner .content1 .depth2 .top span, .page .inner .content2 .depth2 .top span, .page .inner .content3 .depth2 .top span {
   font-size: 30px;
 }
-.page .inner .content .depth2 .bot {
+.page .inner .content1 .depth2 .bot, .page .inner .content2 .depth2 .bot, .page .inner .content3 .depth2 .bot {
   display: flex;
   flex-wrap: wrap;
   align-content: flex-end;
   align-items: flex-end;
-  font-weight: 800;
+  font-weight: 700;
 }
-.page .inner .content .depth2 .bot strong {
+.page .inner .content1 .depth2 .bot strong, .page .inner .content2 .depth2 .bot strong, .page .inner .content3 .depth2 .bot strong {
   font-size: 80px;
 }
-.page .inner .content .depth2 .bot p {
+.page .inner .content1 .depth2 .bot p, .page .inner .content2 .depth2 .bot p, .page .inner .content3 .depth2 .bot p {
   font-size: 60px;
+}
+.page .inner .content3 .depth1 {
+  border-bottom: 1px solid #9d9d9d;
+}
+.page .inner .content1.on, .page .inner .content3.on {
+  animation: fadeleft forwards 1s;
+}
+.page .inner .content2.on {
+  animation: faderight forwards 1s;
 }
 
 .footer {
@@ -457,6 +515,34 @@
   font-weight: 700;
 }
 
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(35px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes fromside {
+  0% {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes fromside2 {
+  0% {
+    transform: translateX(40%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
 @keyframes animate {
   0% {
     transform: translateX(0);
@@ -471,5 +557,25 @@
   }
   100% {
     transform: scaleX(1);
+  }
+}
+@keyframes fadeleft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100vh);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes faderight {
+  0% {
+    opacity: 0;
+    transform: translateX(100vh);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
   }
 }/*# sourceMappingURL=main.css.map */
