--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -27,7 +27,7 @@ $black3 : #9d9d9d;
 $black4 : #F8F8F8;
 $black5 : #707070;
 $font1 : 400;
-$font2 : 800;
+$font2 : 700;
 
 .header {
     position: fixed;
@@ -106,6 +106,7 @@ $font2 : 800;
     
 }
 .visual {
+    max-height: 950px;
     min-height: 850px;
     height: 100vh;
     position: relative;
@@ -142,11 +143,24 @@ $font2 : 800;
     .tit {
         width: 100%;
         margin-top: 250px;
+        .txth1 {
+            overflow: hidden;
+            height: 60px;
+        }
+        .txth2 {
+            overflow: hidden;
+            height: 96px;
+        }
         p {
+            opacity: 0;
+            animation: fadeInUp forwards 0.8s;
+            overflow: hidden;
             display: block;
             font-size: 50px;
         }
         h2 {
+            animation: fadeInUp forwards 0.8s .1s;
+            opacity: 0;
             font-size: 80px;
             font-weight: $font2;
             span {
@@ -160,8 +174,14 @@ $font2 : 800;
     .subtit {
         margin-bottom: 150px;
         width: 100%;
+        .txtbox {
+            height: 36px;
+            overflow: hidden;
+        }
         p {
+            opacity: 0;
             font-size: 30px;
+            animation: fadeInUp forwards 0.8s 0.2s;
         }
     }
     .sub {
@@ -201,6 +221,14 @@ $font2 : 800;
     justify-content: center;
     min-height: 820px;
     width: 100%;
+    &.on {
+        .txt {
+            animation: fromside forwards 0.5s 0.5s;
+        }
+        &::after {
+            animation: fromside2 forwards 0.5s 0.1s;
+        }
+    }
     &::before {
         @include absolute_set();
         display: block;
@@ -211,11 +239,21 @@ $font2 : 800;
         height: 100%;
         background-color: #F8F8F8;
     }
+    &::after {
+        @include absolute_set();
+        display: block;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #F8F8F8;
+    }
     .inner {
         position: relative;
         padding: 200px 0 0 0;
         transform: translate(18%);
         h2 {
+            opacity: 0;
             display: block;
             font-size: 20px;
             font-weight: $font2;
@@ -227,6 +265,7 @@ $font2 : 800;
                 @include flex1();
                 li {
                     min-width: 300px;
+                    opacity: 0;
                     p {
                         display: block;
                         margin-bottom: 5px;
@@ -252,13 +291,13 @@ $font2 : 800;
                                 opacity: 1;
                             }
                             .bar1 {
-                                animation: barscale 1.6s forwards;
+                                animation: barscale 1.6s forwards 0.5s;
                             }
                             .bar2 {
-                                animation: barscale 1.5s forwards;
+                                animation: barscale 1.5s forwards 0.5s;
                             }
                             .bar3 {
-                                animation: barscale 1.8s forwards;
+                                animation: barscale 1.8s forwards 0.5s;
                             }
                         }
                         div {
@@ -294,6 +333,7 @@ $font2 : 800;
             ul {
                 @include flex1();
                 li {
+                    opacity: 0;
                     min-width: 300px;
                     p {
                         display: block;
@@ -309,6 +349,18 @@ $font2 : 800;
                     }
                 }
             }
+        }
+        .info.animation {
+            animation: fromside forwards 0.5s 0.6s;
+        }
+        .skill.animation {
+            animation: fromside forwards 0.5s 0.7s;
+        }
+        .edu.animation {
+            animation: fromside forwards 0.5s 0.8s;
+        }
+        .exp.animation {
+            animation: fromside forwards 0.5s 0.9s;
         }
     }
 }
@@ -336,15 +388,13 @@ $font2 : 800;
                 font-weight: 600;
             }
         }
-        .content {
-            display: block;
+        .content1, .content2, .content3 {
+            display: block; 
             width: 100%;
             height: auto;
+            opacity: 0;
             &:hover {
                 background-color: $black4;
-            }
-            &.last .depth1 {
-                border-bottom: 1px solid $black3;
             }
             .depth1 {
                 @include flex1();
@@ -450,7 +500,19 @@ $font2 : 800;
                 }
             }
         }
-        
+        .content3 .depth1 {
+            border-bottom: 1px solid $black3;
+        }
+        .content1, .content3 {
+            &.on {
+                animation: fadeleft forwards 1s;
+            }
+        }
+        .content2 {
+            &.on {
+                animation: faderight forwards 1s;
+            }
+        }
     }
 }
 .footer {
@@ -470,6 +532,18 @@ $font2 : 800;
         }
     }
 }
+@keyframes fadeInUp {
+    0% { opacity: 0; transform: translateY(35px); }
+    100% { opacity: 1; transform: translateY(0); }
+}
+@keyframes fromside {
+    0% { opacity: 0; transform: translateX(-20px); }
+    100% { opacity: 1; transform: translateX(0); }
+}
+@keyframes fromside2 {
+    0% { transform: translateX(40%); }
+    100% { transform: translateX(100%); }
+}
 @keyframes animate {
     0% { transform: translateX(0); }
     100% { transform: translateX(-3265px); }
@@ -477,4 +551,12 @@ $font2 : 800;
 @keyframes barscale {
     0% { transform: scaleX(0); }
     100% { transform: scaleX(1); }
+}
+@keyframes fadeleft {
+    0% { opacity: 0; transform: translateX(-100vh); }
+    100% { opacity: 1; transform: translateX(0); }
+}
+@keyframes faderight {
+    0% { opacity: 0; transform: translateX(100vh); }
+    100% { opacity: 1; transform: translateX(0); }
 }
