--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@
   color: rgba(112, 112, 112, 0.03);
   font-weight: 700;
   animation-name: animate;
-  animation-duration: 40s;
+  animation-duration: 30s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
@@ -194,6 +194,26 @@
 .visual .sub ul .sub_cnt p {
   display: block;
   font-size: 20px;
+}
+.visual .scroll {
+  opacity: 0;
+  animation: scrolling infinite forwards 4s 2s;
+  position: absolute;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  bottom: 70px;
+  left: calc(50% - 25px);
+  border: 2px solid #9d9d9d;
+  width: 25px;
+  height: 40px;
+}
+.visual .scroll .scroll2 {
+  margin-top: 10px;
+  border-radius: 10px;
+  border: 2px solid #9d9d9d;
+  width: 5px;
+  height: 8px;
 }
 
 .about {
@@ -577,5 +597,27 @@
   100% {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+@keyframes scrolling {
+  0% {
+    opacity: 0;
+    transform: translateY(0);
+  }
+  20% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  60% {
+    opacity: 1;
+    transform: translateY(40px);
+  }
+  80% {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(40px);
   }
 }/*# sourceMappingURL=main.css.map */
