--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -213,25 +213,31 @@ $font2 : 700;
             }
         }
     }
-    .scroll {
-        opacity: 0;
-        animation: scrolling infinite forwards 4s 2s;
+    .scroll_inner {
         position: absolute;
-        border-radius: 20px;
-        display: flex;
         justify-content: center;
         bottom: 70px;
-        left: calc(50% - 25px);
-        border: 2px solid $black3;
-        width: 25px;
-        height: 40px;
-        .scroll2 {
-            margin-top: 10px;
-            border-radius: 10px;
+        left: calc(50% - 65px);
+        .scroll {
+            opacity: 0;
+            animation: scrolling infinite linear 4s 2s;
+            margin: 10px 0 0 45px;
+            display: flex;
+            justify-content: center;
+            border-radius: 20px;
             border: 2px solid $black3;
-            width: 5px;
-            height: 8px;
+            width: 25px;
+            height: 40px;
+            .scroll2 {
+                position: relative;
+                margin-top: 10px;
+                border-radius: 10px;
+                border: 2px solid $black3;
+                width: 5px;
+                height: 8px;
+            }
         }
+        
     }
 }
 .about {
@@ -583,7 +589,7 @@ $font2 : 700;
 @keyframes scrolling {
     0% { opacity: 0; transform: translateY(0); }
     20% { opacity: 1; transform: translateY(0); }
-    60% { opacity: 1; transform: translateY(40px); }
-    80% { opacity: 0; transform: translateY(40px); }
-    100% { opacity: 0; transform: translateY(40px); }
+    50% { opacity: 1; transform: translateY(25px); }
+    70% { opacity: 0; transform: translateY(25px); }
+    100% { opacity: 0; transform: translateY(25px); }
 }
